changes 08.11.2023